fix: readable line length
Bump down `readable-line-length` to `75ch` and also apply to `blockquote` elements

fix #375

--- a/sass/mixins/_utils.scss
+++ b/sass/mixins/_utils.scss
@@ -12,7 +12,7 @@
  */
 @mixin readable-line-length() {
   max-width: $max-line-length;
-  max-width: 80ch;
+  max-width: 75ch;
 }
 
 /* 
